<resources>
    <string name="app_name">CarLoanCalculator</string>
    <string name="car_price">Car Price</string>
    <string name="down_payment">Down Payment</string>
    <string name="loan_period">Loan Period(years)</string>
    <string name="interest_rate">Interest Rate(%) </string>
    <string name="loan">Loan: </string>
    <string name="interest">Interest:</string>
    <string name="monthly_repayment">Monthly Repayment: </string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="error_input">Error Required</string>
    <string name="action_settings">setting</string>
</resources>
